# FABLEBREAKER-BENCHMARK

./: .gitignore  .pylintrc  CONTRIBUTING.md  DOGFOOD_REPORT.md  FULL_REPO_SCAN_REPORT.md  GOVERNANCE.md  PACKET_POLICY.md  PRODUCT_STRATEGY.md  README.md  fablebreaker_service.py
.github/workflows/: fablebreaker-audit.yml  fablebreaker-autoagent-self.yml  fablebreaker-autoagent.yml
benchmark-certification/: PRODUCT_STRATEGY.md  README.md
benchmark-certification/certification/: evidence-pack-template.json
benchmark-certification/manifests/: benchmark-manifest.json
benchmark-certification/services/: fablebreaker_service.py
fablebreaker/: README.md
fablebreaker-autoagent/: README.md  action.yml  agent.py
fablebreaker/candidates/: baseline_candidate.py  example_multi_agent.py
fablebreaker/data/: seed_registry.json
fablebreaker/dataset/: batch_hidden_1701.jsonl  batch_hidden_31337.jsonl  batch_hidden_9999.jsonl  batch_public.jsonl  public.jsonl
fablebreaker/fablebreaker/: __init__.py  astlang.py  evidence.py  generator.py  leaderboard.py  regression.py  scorer.py  seeds.py
fablebreaker/reports/: audit_hidden_seed_1701_score.json  audit_public_score.json  baseline_hidden_seed_1701_score.json  evidence-pack-candidates_baseline_candidate-20260611-220000.json  score-hidden-candidates_baseline_candidate-20260611-220000.json  score-public-candidates_baseline_candidate-20260611-220000.json  source_note.md
fablebreaker_lib/: __init__.py  pyproject.toml
fablebreaker_lib/benchmarks/: __init__.py  dataset.py  leaderboard.py  scoring.py  suite.py
fablebreaker_lib/emergent/: __init__.py  detection.py  monitoring.py  safety.py
fablebreaker_lib/foundations/: __init__.py  axioms.py  base.py  integrity.py
fablebreaker_lib/governance/: __init__.py  accountability.py  oversight.py  policies.py
fablebreaker_lib/intelligence/: __init__.py
fablebreaker_lib/intelligence/dataset/: __init__.py  ai_benchmarks_mega.jsonl  catalog.py  loader.py
fablebreaker_lib/intelligence/engines/: __init__.py  adversarial.py  base.py  certification.py  contamination.py  correctness.py  meta_evaluation.py
fablebreaker_lib/intelligence/skills/: __init__.py  analysis.py  base.py  code_review.py  coverage.py  detection.py  documentation.py  generation.py  reasoning.py  refactoring.py  security.py  self_analysis.py  synthesis.py
fablebreaker_lib/protocols/: __init__.py  certification.py  communication.py  evidence.py
fablebreaker_lib/regulations/: __init__.py  audit.py  compliance.py  standards.py
fablebreaker_lib/rules/: __init__.py  constraints.py  engine.py
fablebreaker_lib/tests/: __init__.py  framework.py  validators.py
fablebreaker_sdk/: README.md  __init__.py  cli.py  core.py  pyproject.toml  reporter.py  scanner.py
journal/: editorial-board.html  index.html
(+48 files in other folders)
