[project]
name = "fablebreaker-sdk"
version = "1.0.0"
description = "The FableBreaker AI SDK — downloadable adversarial evaluation, certification, and intelligence toolkit for AI systems."
authors = [
    {name = "ItsNotAI LABS"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
keywords = [
    "ai",
    "sdk",
    "evaluation",
    "adversarial",
    "certification",
    "benchmarks",
    "testing",
    "intelligence",
    "security",
    "code-review",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/ItsNotAILABS/FABLEBREAKER-BENCHMARK"
Documentation = "https://github.com/ItsNotAILABS/FABLEBREAKER-BENCHMARK#sdk"

[project.scripts]
fablebreaker = "fablebreaker_sdk.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fablebreaker_sdk*"]
